@@ -4,6 +4,8 @@
 
 Version 1.4.12 - SVN
 --------------------
+  - Enabled user selection of address format when adding from address
+    book during message composition.
 
 Version 1.4.11 - 29 September 2007
 ----------------------------------
